RESOLVED FIXED300299
SpeculationRules: NavigationTiming values are wrong
https://bugs.webkit.org/show_bug.cgi?id=300299
Summary SpeculationRules: NavigationTiming values are wrong
Yoav Weiss
Reported 2025-10-06 23:53:33 PDT
The various navigation-timing speculation rules tests have failing expectations. We should get the tests to pass (and get prefetched documents to have the right navigation timing values).
Attachments
Yoav Weiss
Comment 1 2025-10-07 02:08:09 PDT
Alexey Proskuryakov
Comment 2 2025-10-07 13:26:11 PDT
*** Bug 300298 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2025-10-07 14:12:49 PDT
Committed 301163@main (ee89e36ccfe2): <https://commits.webkit.org/301163@main> Reviewed commits have been landed. Closing PR #51932 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-10-07 14:13:12 PDT
Radar WebKit Bug Importer
Comment 5 2025-10-07 14:13:13 PDT
Note You need to log in before you can comment on or make changes to this bug.