Speculation Rules: fix up navigation-timing values. https://bugs.webkit.org/show_bug.cgi?id=300299

Reviewed by Alex Christensen.

This PR saves the NetworkLoadMetrics when a DocumentPrefetcher gets them and applies them to a document when it finishes loading and its URL matches a prefetched document.
It also simplifies the DocumentPrefetcher logic related to prefetched CachedResources.

* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/navigation-timing-sizes.https_prefetch=true&bypass_cache=true-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/navigation-timing-sizes.https_prefetch=true-expected.txt: Progression.
* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::notifyFinished): Apply the saved NetworkLoadMetrics.
* Source/WebCore/loader/DocumentPrefetcher.cpp:
(WebCore::DocumentPrefetcher::prefetch): Change m_prefetchedResources data structure to m_prefetchedData.
(WebCore::DocumentPrefetcher::notifyFinished): Save NetworkLoadMetrics and avoid spurious lookups in prefetched resources.
(WebCore::DocumentPrefetcher::takePrefetchedNetworkLoadMetrics): Return NetworkLoadMetrics from the prefetched resource, based on URL.
(WebCore::DocumentPrefetcher::~DocumentPrefetcher): Remove manual cleanups that should happen when the client is removed.
(WebCore::DocumentPrefetcher::redirectReceived): Deleted.
* Source/WebCore/loader/DocumentPrefetcher.h: Add PrefetchedResourceData struct.

Canonical link: https://commits.webkit.org/301163@main